# nexus

./: .codecov.yml  .env.example  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-THIRD-PARTY  README.md  README.zh.md  book.toml  clippy.toml  deny.toml  rustfmt.toml
crates/nexus-actuator/: Cargo.toml
crates/nexus-actuator/src/: env.rs  health.rs  info.rs  lib.rs  metrics.rs  routes.rs
crates/nexus-aop/: Cargo.toml  README.md
crates/nexus-aop/examples/: logging_aspect.rs
crates/nexus-aop/src/: advice.rs  aspect.rs  lib.rs  pointcut.rs  runtime.rs
crates/nexus-benches/: Cargo.toml  extractors.rs  http_server.rs  lib.rs  router.rs
crates/nexus-cache/: Cargo.toml  README.md
crates/nexus-cache/src/: cache.rs  cache_config.rs  cache_evict.rs  cache_manager.rs  cache_put.rs  cacheable.rs  condition_evaluator.rs  key_generator.rs  lib.rs  resolver.rs
crates/nexus-cache/tests/: cache_conditions_test.rs
crates/nexus-cloud/: Cargo.toml  README.md
crates/nexus-cloud/src/: circuit_breaker.rs  config.rs  discovery.rs  gateway.rs  lib.rs  load_balancer.rs
crates/nexus-config/: Cargo.toml  README.md
crates/nexus-config/src/: config.rs  environment.rs  error.rs  lib.rs  loader.rs  properties.rs  source.rs  value.rs
crates/nexus-core/: Cargo.toml  README.md
crates/nexus-core/src/: bean.rs  container.rs  context.rs  error.rs  extension.rs  lib.rs  reflect.rs
crates/nexus-data-annotations/: Cargo.toml  README.md
crates/nexus-data-annotations/examples/: user_entity.rs
crates/nexus-data-annotations/src/: column.rs  entity.rs  id.rs  lib.rs  pre_authorize_macro.rs  query.rs  repository.rs  transactional.rs  transactional_macro.rs
crates/nexus-data-annotations/tests/: entity_test.rs  pre_authorize_test.rs
crates/nexus-data-commons/: Cargo.toml
crates/nexus-data-commons/src/: entity.rs  error.rs  lib.rs  page.rs  query.rs  repository.rs  sort.rs
crates/nexus-data-orm/: Cargo.toml
crates/nexus-data-orm/src/: active_record.rs  error.rs  lib.rs  migrations.rs  model.rs  query.rs  relationships.rs  repository.rs
crates/nexus-data-rdbc/: Cargo.toml
crates/nexus-data-rdbc/src/: client.rs  config.rs  connection.rs  error.rs  executor.rs  lib.rs  mapper.rs  pool.rs  query_runtime.rs  repository.rs  row.rs  transaction.rs
crates/nexus-exceptions/: Cargo.toml  README.md
crates/nexus-exceptions/src/: advice.rs  error_body.rs  handler.rs  lib.rs  response.rs
crates/nexus-extractors/: Cargo.toml  README.md
crates/nexus-extractors/src/: attribute.rs  cookie.rs  form.rs  header.rs  json.rs  lib.rs  matrix.rs  model.rs  path.rs  query.rs  state.rs
crates/nexus-http/: Cargo.toml  README.md
crates/nexus-http/src/: api_response.rs  body.rs  builder.rs  conn.rs  error.rs  exception.rs  ext.rs  http2.rs  lib.rs  method.rs  multipart.rs  request.rs  response.rs  server.rs  service.rs  sse.rs  status.rs  validation.rs  websocket.rs
crates/nexus-lombok/: Cargo.toml  README.md
crates/nexus-lombok/examples/: user_entity.rs
crates/nexus-lombok/src/: builder.rs  constructor.rs  data.rs  getter.rs  lib.rs  setter.rs  value.rs  with_method.rs
crates/nexus-lombok/tests/: data_test.rs
crates/nexus-macros/: Cargo.toml  README.md
crates/nexus-macros/src/: derive.rs  handler.rs  lib.rs  transactional.rs
crates/nexus-middleware/: Cargo.toml  README.md
crates/nexus-middleware/src/: compression.rs  cors.rs  jwt_auth.rs  lib.rs  logger.rs  middleware.rs  static_files.rs  timeout.rs
crates/nexus-multipart/: Cargo.toml  README.md
crates/nexus-multipart/src/: error.rs  extractor.rs  field.rs  form.rs  lib.rs
crates/nexus-observability/: Cargo.toml  README.md
crates/nexus-observability/src/: lib.rs  log.rs  metrics.rs  nexus_format.rs  trace.rs
crates/nexus-openapi/: Cargo.toml  README.md
crates/nexus-openapi/src/: config.rs  http.rs  lib.rs  macros.rs  openapi.rs  operation.rs  path.rs  response.rs  schema.rs  swagger.rs
crates/nexus-resilience/: Cargo.toml  README.md
crates/nexus-resilience/src/: circuit.rs  discovery.rs  lib.rs  rate_limit.rs  retry.rs  timeout.rs
crates/nexus-response/: Cargo.toml  README.md
crates/nexus-response/src/: html.rs  json.rs  lib.rs  response.rs  result.rs
crates/nexus-router/: Cargo.toml  README.md
crates/nexus-router/src/: lib.rs  params.rs  route.rs  router.rs  trie.rs
crates/nexus-runtime/: Cargo.toml  README.md
crates/nexus-runtime/benches/: runtime_bench.rs
crates/nexus-runtime/src/: channel.rs  io.rs  lib.rs  runtime.rs  select.rs  task.rs  time.rs
crates/nexus-runtime/tests/: integration_test.rs
crates/nexus-schedule/: Cargo.toml  README.md
crates/nexus-schedule/src/: lib.rs  scheduled.rs
crates/nexus-security/: Cargo.toml  README.md
crates/nexus-security/src/: auth.rs  authority.rs  context.rs  encoder.rs  error.rs  jwt.rs  lib.rs  pre_authorize.rs  rbac.rs  request_ext.rs  role.rs  secured.rs  user.rs
crates/nexus-starter/: Cargo.toml
crates/nexus-starter/src/: lib.rs  prelude.rs
examples/: Cargo.toml  EXAMPLES.md  README.md  cache_example.rs  cache_with_conditions.rs  config_example.rs  ioc_container_example.rs  jwt_auth_example.rs  logging_example.rs  pre_authorize_example.rs  runtime_integration_example.rs  spring_boot_logging_demo.rs  spring_style_example.rs  transactional_example.rs
examples/runtime-chat-server/: Cargo.toml
examples/runtime-chat-server/src/: main.rs
examples/runtime-echo-server/: Cargo.toml
examples/runtime-echo-server/src/: main.rs
examples/runtime-timer-service/: Cargo.toml
examples/src/: actuator_example.rs  core_example.rs  exceptions_example.rs  hello_world.rs  http_example.rs  json_api.rs  logging_demo.rs  middleware_demo.rs  multipart_example.rs  quick_start.rs  resilience_example.rs  router_demo.rs  router_example.rs  schedule_example.rs  security_example.rs  starter_example.rs  stress_test.rs  techempower_benchmark.rs  todo_api.rs  upload_form.html  validation_example.rs  web3_example.rs
fuzzers/: Cargo.toml  README.md
fuzzers/fuzz_targets/: compression.rs  http_request_parsing.rs  router_matching.rs
(+256 files in other folders)
