[workspace]
members = [
    "crates/nexus-runtime",
    "crates/nexus-core",
    "crates/nexus-http",
    "crates/nexus-router",
    "crates/nexus-extractors",
    "crates/nexus-response",
    "crates/nexus-middleware",
    "crates/nexus-resilience",
    "crates/nexus-observability",
    "crates/nexus-web3",
    "crates/nexus-macros",
    "examples",
]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha"
authors = ["Nexus Contributors"]
repository = "https://github.com/nexus-rs/nexus"
homepage = "https://nexusframework.com"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
# ==============================================================================
# Spring Framework Equivalent Dependencies / Spring Framework 等价依赖
# ==============================================================================

# Core Container (IoC) / 核心容器 (IoC)
# Equivalent to: Spring Core, Spring Context
# Equivalent to: spring-core, spring-context, spring-beans
arc-swap = "1.7"
dashmap = "6.1"
parking_lot = "0.12"
once_cell = "1.20"
tokio = { version = "1.43", default-features = false }

# HTTP & Web / HTTP 和 Web
# Equivalent to: Spring Web, Spring WebFlux, Spring MVC
http = "1.4.0"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = "0.1"

# Serialization & Data Binding / 序列化和数据绑定
# Equivalent to: Spring Web MVC JSON binding, Jackson
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Bytes & Buffers / 字节和缓冲区
bytes = "1.9"
bytes-utils = "0.1"

# Tracing & Observability / 追踪和可观测性
# Equivalent to: Spring Observability, Spring Cloud Sleuth
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
tracing-appender = "0.2"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.22"
metric = "0.7"
metrics = "0.23"

# Macros / 宏
# Equivalent to: Spring Annotation Processing
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit-mut"] }
darling = "0.20"

# Error Handling / 错误处理
# Equivalent to: Spring Exception Handling
thiserror = "2.0"
anyhow = "1.0"
error-stack = "0.5"

# Async Runtime & Utilities / 异步运行时和工具
# Equivalent to: Spring Reactive, Project Reactor
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
pin-project = "1.1"
pin-project-lite = "0.2"

# Configuration / 配置
# Equivalent to: Spring Boot Configuration, @ConfigurationProperties
config = "0.15"
toml = "0.8"
yaml-rust2 = "0.9"
dotenvy = "0.15"

# Validation / 验证
# Equivalent to: Spring Validation, Hibernate Validator
validator = { version = "0.20", features = ["derive"] }
email_address = "0.2"
regex = "1.11"

# Caching / 缓存
# Equivalent to: Spring Cache Abstraction
moka = { version = "0.12", features = ["future", "sync"] }
quick_cache = "0.6"

# Rate Limiting & Resilience / 限流和弹性
# Equivalent to: Spring Cloud Circuit Breaker, Resilience4j
governor = "0.7"
tower = "0.5"
tower_governor = "0.5"

# Scheduled Tasks / 定时任务
# Equivalent to: Spring Scheduling, @Scheduled
tokio-cron-scheduler = "0.13"

# Database / 数据库
# Equivalent to: Spring Data, Spring JDBC
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "chrono"] }
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "sqlx-mysql"] }
diesel = { version = "2.2", features = ["postgres", "mysql", "sqlite"] }

# Transaction Management / 事务管理
# Equivalent to: Spring Transaction Management
tokio-postgres = "0.7"

# Security / 安全
# Equivalent to: Spring Security
jsonwebtoken = "9.3"
bcrypt = "0.16"
rand = "0.8"
hmac = "0.12"

# Template Engines / 模板引擎
# Equivalent to: Spring Thymeleaf, FreeMarker
askama = "0.12"
tera = "1.20"
handlebars = "6.3"

# WebSocket / WebSocket
# Equivalent to: Spring WebSocket
tokio-tungstenite = "0.26"
tungstenite = "0.26"

# HTTP/2 & TLS / HTTP/2 和 TLS
# Equivalent to: Spring HTTP/2 support
h2 = "0.4"
rustls = "0.23"
rustls-pemfile = "2.2"
tokio-rustls = "0.26"

# HTTP/3 / HTTP/3 (Spring HTTP/3 equivalent - future)
# Equivalent to: Spring HTTP/3 support (planned)
h3 = "0.0"
h3-quinn = "0.0"
quinn = "0.11"
futures-rustls = "0.26"

# Web3 / 区块链
# Equivalent to: Spring Web3 (community projects)
alloy = { version = "0.11", features = ["full", "network", "rpc", "rpc-types"] }

# CLI / 命令行
# Equivalent to: Spring Shell
clap = { version = "4.5", features = ["derive"] }

# Testing / 测试
# Equivalent to: Spring Test
criterion = "0.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"
proptest = "1.5"
mockito = "1.6"

# Utilities / 工具
itertools = "0.14"
indexmap = "2.7"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "local-offset"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
url = "2.5"
percent-encoding = "2.3"

# ==============================================================================
# Release Configuration / 发布配置
# ==============================================================================

[workspace.metadata.release]
tag-prefix = ""
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# ==============================================================================
# Build Optimizations / 构建优化
# ==============================================================================

# Optimizations for dev / 开发优化
[profile.dev]
# Enable some optimizations for better performance in dev mode
# 在开发模式下启用一些优化以获得更好的性能
opt-level = 0

[profile.dev.package."*"]
# Build dependencies with optimizations
# 使用优化构建依赖项
opt-level = 3

# Release profile optimizations / 发布配置文件优化
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# Profile for benchmarks / 基准测试配置
[profile.bench]
inherits = "release"
debug = true

# Profile for testing with more checks / 测试配置（更多检查）
[profile.test]
opt-level = 1
debug = true

# ==============================================================================
# Lints Configuration / 代码检查配置
# ==============================================================================

[workspace.lints.rust]
# Safety lints / 安全检查
unsafe_code = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

# Modern Rust lints / 现代 Rust 检查
missing_docs = "warn"
missing_debug_implementations = "warn"
single_use_lifetimes = "warn"
unreachable_pub = "warn"

# Nightly lints (will be ignored on stable) / Nightly 检查（在 stable 上忽略)
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
const_item_mutation = "warn"
empty_enum_variants_with_brackets = "warn"
explicit_outlives_requirements = "warn"
uninlined_format_args = "warn"
unused_lifetimes = "warn"
unit_bindings = "warn"

[workspace.lints.clippy]
# Correctness lints / 正确性检查
all = "warn"
correctness = "deny"
suspicious = "warn"

# Performance lints / 性能检查
perf = "warn"
style = "warn"
complexity = "warn"

# Clippy pedantic / 严格检查
pedantic = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "allow"
too_many_lines = "allow"

# Specific lints for specific cases / 特定情况的检查
expect_used = "warn"
unwrap_used = "warn"
panic = "warn"
unimplemented = "warn"
todo = "warn"
unreachable = "warn"
indexing_slicing = "warn"

# Cargo lints / Cargo 检查
cargo = "warn"
multiple_crate_versions = "allow"
