[workspace]
members = [
    "crates/nexus-runtime",
    "crates/nexus-core",
    "crates/nexus-http",
    "crates/nexus-router",
    "crates/nexus-extractors",
    "crates/nexus-response",
    "crates/nexus-middleware",
    "crates/nexus-resilience",
    "crates/nexus-observability",
    "crates/nexus-config",
    "crates/nexus-cache",
    "crates/nexus-tx",
    "crates/nexus-security",
    "crates/nexus-cloud",
    "crates/nexus-schedule",
    "crates/nexus-multipart",
    "crates/nexus-validation",
    "crates/nexus-exceptions",
    "crates/nexus-actuator",
    "crates/nexus-web3",  # Enabled: using alloy 1.4 compatible with serde 1.0
    "crates/nexus-macros",
    "crates/nexus-starter",
    "crates/nexus-benches",
    "crates/nexus-data-commons",
    "examples",
]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha"
authors = ["Nexus Contributors"]
repository = "https://github.com/ViewWay/nexus"
homepage = "https://nexus.viewway.io"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.93"
keywords = ["http", "async", "web", "framework", "server", "spring", "ioc", "aop"]
categories = [
    "web-programming::http-server",
    "web-programming::websocket",
    "network-programming",
    "asynchronous",
]

[workspace.dependencies]
# ==============================================================================
# Spring Framework Equivalent Dependencies / Spring Framework 等价依赖
# ==============================================================================

# Core Container (IoC) / 核心容器 (IoC)
# Equivalent to: Spring Core, Spring Context
# Equivalent to: spring-core, spring-context, spring-beans
arc-swap = "1.7"
dashmap = "6.1"
parking_lot = "0.12"
once_cell = "1.20"
tokio = { version = "1.43", default-features = false }

# HTTP & Web / HTTP 和 Web
# Equivalent to: Spring Web, Spring WebFlux, Spring MVC
http = "1.4.0"
http-body = "1.0"
http-body-util = "0.1"
httparse = "1.9"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json"] }

# Serialization & Data Binding / 序列化和数据绑定
# Equivalent to: Spring Web MVC JSON binding, Jackson
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Bytes & Buffers / 字节和缓冲区
bytes = "1.9"
bytes-utils = "0.1"

# Multipart / Multipart
# Equivalent to: Spring MultipartFile
multer = "3.1"

# Utilities / 工具
ulid = "1.1"

# Tracing & Observability / 追踪和可观测性
# Equivalent to: Spring Observability, Spring Cloud Sleuth
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
tracing-appender = "0.2"
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.22"
metric = "0.1.2"
metrics = "0.24.3"

# Macros / 宏
# Equivalent to: Spring Annotation Processing
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit-mut"] }
darling = "0.23.0"

# Error Handling / 错误处理
# Equivalent to: Spring Exception Handling
thiserror = "2.0"
anyhow = "1.0"
error-stack = "0.6.0"

# Async Runtime & Utilities / 异步运行时和工具
# Equivalent to: Spring Reactive, Project Reactor
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
pin-project = "1.1"
pin-project-lite = "0.2"

# Configuration / 配置
# Equivalent to: Spring Boot Configuration, @ConfigurationProperties
config = "0.15"
toml = "0.9.8"
yaml-rust2 = "0.11.0"
dotenvy = "0.15"

# Validation / 验证
# Equivalent to: Spring Validation, Hibernate Validator
validator = { version = "0.20", features = ["derive"] }
email_address = "0.2"
regex = "1.11"

# Caching / 缓存
# Equivalent to: Spring Cache Abstraction
moka = { version = "0.12", features = ["future", "sync"] }
quick_cache = "0.6"

# Rate Limiting & Resilience / 限流和弹性
# Equivalent to: Spring Cloud Circuit Breaker, Resilience4j
governor = "0.10.4"
tower = "0.5"
tower_governor = "0.8.0"
tower-http = "0.6"
async-compression = "0.4"
csrf = "0.5"
headers = "0.4"

# Scheduled Tasks / 定时任务
# Equivalent to: Spring Scheduling, @Scheduled
tokio-cron-scheduler = "0.15.1"

# Database / 数据库
# Equivalent to: Spring Data, Spring JDBC
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "chrono"] }
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "sqlx-mysql"] }
diesel = { version = "2.2", features = ["postgres", "mysql", "sqlite"] }

# Transaction Management / 事务管理
# Equivalent to: Spring Transaction Management
tokio-postgres = "0.7"

# Security / 安全
# Equivalent to: Spring Security
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.18.0"
rand = "0.9.2"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"
getrandom = "0.3"
sha3 = "0.10"
sha2 = "0.10"

# Template Engines / 模板引擎
# Equivalent to: Spring Thymeleaf, FreeMarker
askama = "0.15.4"
tera = "1.20"
handlebars = "6.4.0"

# WebSocket / WebSocket
# Equivalent to: Spring WebSocket
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"

# HTTP/2 & TLS / HTTP/2 和 TLS
# Equivalent to: Spring HTTP/2 support
h2 = "0.4"
rustls = "0.23"
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26"

# HTTP/3 / HTTP/3 (Spring HTTP/3 equivalent - future)
# Equivalent to: Spring HTTP/3 support (planned)
h3 = "^0.0.8"
h3-quinn = "^0.0.10"
quinn = "0.11"
futures-rustls = "0.26"

# Web3 / 区块链
# Equivalent to: Spring Web3 (community projects)
# Note: Using latest stable versions (1.4.x) compatible with serde 1.0
alloy = { version = "1.4", features = ["network", "rpc", "rpc-types"] }
alloy-consensus = { version = "1.4", default-features = false }
alloy-primitives = "1.5"
alloy-transport = "1.4"
alloy-network = "1.4"
alloy-rpc-types = "1.4"

# CLI / 命令行
# Equivalent to: Spring Shell
clap = { version = "4.5", features = ["derive"] }

# Service Discovery / 服务发现
# Equivalent to: Spring Cloud Service Discovery
consul = "0.4"
etcd-rs = "1.0"
nacos = "0.0"

# System Info / 系统信息
# Equivalent to: Spring Boot Actuator system metrics
sysinfo = "0.38.0"

# Testing / 测试
# Equivalent to: Spring Test
criterion = "0.8.1"
quickcheck = "1.0"
quickcheck_macros = "1.0"
proptest = "1.5"
mockito = "1.6"
trybuild = "1.0"
tokio-test = "0.4"

# Utilities / 工具
itertools = "0.14"
indexmap = { version = "2.13.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3.46", features = ["serde", "local-offset"] }
uuid = { version = "1.12", features = ["v4", "serde"] }
url = "2.5"
percent-encoding = "2.3"

# Additional dependencies / 额外依赖
mime = "0.3"
mime_guess = "2.0"
secp256k1 = "0.31"
bip39 = "2.0"
siphasher = "1.0"
subtle = "2.5"
md-5 = "0.11.0-rc.3"
matchit = "0.9.1"
serde_yaml = "0.9"
proc-macro-error = "1.0"
proc-macro-error-attr = "1.0"
tracing-opentelemetry = "0.32"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
# opentelemetry-prometheus is discontinued - removed due to security vulnerabilities
# Use custom metrics export or opentelemetry-prometheus-text-exporter instead
prometheus = "0.14"
metrics-exporter-prometheus = "0.18"
tracing-core = "0.1"
log = "0.4"
slog = "2.8"
env_logger = "0.11"
bevy_reflect = "0.13"

# ==============================================================================
# Release Configuration / 发布配置
# ==============================================================================

[workspace.metadata.release]
tag-prefix = ""
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# ==============================================================================
# Build Optimizations / 构建优化
# ==============================================================================

# Optimizations for dev / 开发优化
[profile.dev]
# Enable some optimizations for better performance in dev mode
# 在开发模式下启用一些优化以获得更好的性能
opt-level = 0

[profile.dev.package."*"]
# Build dependencies with optimizations
# 使用优化构建依赖项
opt-level = 3

# Release profile optimizations / 发布配置文件优化
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

# Profile for benchmarks / 基准测试配置
[profile.bench]
inherits = "release"
debug = true

# Profile for testing with more checks / 测试配置（更多检查）
[profile.test]
opt-level = 1
debug = true

# ==============================================================================
# Lints Configuration / 代码检查配置
# ==============================================================================

[workspace.lints.rust]
# Safety lints / 安全检查
unsafe_code = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

# Modern Rust lints / 现代 Rust 检查
missing_docs = "warn"
missing_debug_implementations = "allow"
single_use_lifetimes = "warn"
unreachable_pub = "warn"

# Nightly lints (will be ignored on stable) / Nightly 检查（在 stable 上忽略)
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
const_item_mutation = "warn"
explicit_outlives_requirements = "warn"
unused_lifetimes = "warn"
unit_bindings = "warn"

[workspace.lints.clippy]
# Correctness lints / 正确性检查
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Performance lints / 性能检查
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }

# Clippy pedantic / 严格检查
pedantic = { level = "warn", priority = -1 }
# Allow missing documentation for now - will be improved incrementally
# 暂时允许缺少文档 - 将逐步改进
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"

# Specific lints for specific cases / 特定情况的检查
expect_used = "warn"
unwrap_used = "warn"
panic = "allow"
unimplemented = "allow"
todo = "allow"
unreachable = "allow"
indexing_slicing = "warn"

# Documentation lints - allow for now as we improve docs
# Override pedantic settings for missing safety documentation
# 文档检查 - 暂时允许，我们将逐步改进文档
missing_safety_doc = "allow"

# Allow some pedantic lints that are often false positives
# 允许一些经常误报的严格检查
too_many_arguments = "allow"
type_complexity = "allow"
# Allow for low-level system code
# 允许底层系统代码
unnecessary_wraps = "allow"
# Allow raw pointer casts for FFI
# 允许用于FFI的原始指针转换
borrow_as_ptr = "allow"
cast_ptr_alignment = "allow"
# Allow some efficiency lints that are often premature optimization
# 允许一些经常是过早优化的效率检查
ptr_as_ptr = "allow"
implicit_clone = "allow"
# Allow unused self in trait methods
# 允许trait方法中未使用的self
unused_self = "allow"
# Allow missing must_use on some internal methods
# 允许某些内部方法缺少must_use
must_use_candidate = "allow"
# Allow bool count in config structs
# 允许配置结构体中的bool计数
struct_excessive_bools = "allow"
# Allow integer casts for FFI
# 允许用于FFI的整数转换
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
# Allow loop variable used for indexing
# 允许用于索引的循环变量
needless_range_loop = "allow"
# Allow redundant clone for simplicity
# 允许为了简单起见的冗余克隆
redundant_clone = "allow"
# Allow reference to raw pointer casts (common in FFI)
# 允许引用到原始指针的转换（FFI中常见)
ref_as_ptr = "allow"
# Allow let...else rewrites (can reduce readability)
# 允许let...else重写（可能降低可读性）
collapsible_else_if = "allow"
useless_let_if_seq = "allow"
# Allow panic in some cases (will be reviewed later)
# 在某些情况下允许panic（稍后审查）
panic_in_result_fn = "allow"
# Allow mutable borrow from immutable input for interior mutability
# 允许从不可变输入进行可变借用用于内部可变性
mut_from_ref = "allow"
# Allow pass by reference efficiency warnings (premature optimization)
# 允许传递引用的效率警告（过早优化)
ptr_arg = "allow"
# Allow double comparisons (common in validation)
# 允许双重比较（验证中常见）
double_comparisons = "allow"
# Allow some additional patterns
# 允许一些额外的模式
should_implement_trait = "allow"
missing_trait_methods = "allow"
# Allow std::io::Error::other suggestions (may not always apply)
# 允许std::io::Error::other建议（可能不总是适用)

# Cargo lints / Cargo 检查
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
# Allow let...else patterns that may be less readable
# 允许可读性可能较差的let...else模式
needless_else = "allow"
# Allow panic in production code (runtime assertions)
# 允许生产代码中的panic（运行时断言）
# Allow manual implementation of well-known IPs
# 允许手动实现的知名IP
manual_is_power_of_two = "allow"
# Allow clone on Copy types (for clarity)
# 允许在Copy类型上使用clone（为了清晰）
clone_on_copy = "allow"
# Allow match over () for explicit handling
# 允许为了显式处理而match ()
match_single_binding = "allow"
# Allow unused arguments (common in trait impls) - handled by rustc unused
# 允许未使用的参数（trait impl中常见）- 由rustc unused处理
# Allow direct format! usage
# 允许直接使用format!
uninlined_format_args = "allow"
# Allow cast_constness (raw pointer mutability) - not a clippy lint
# 允许cast_constness（原始指针可变性）- 不是clippy检查
# Allow std::io::Error::other suggestions
# 允许std::io::Error::other建议
std_instead_of_core = "allow"
# Allow LinkedList (valid for some use cases)
# 允许LinkedList（某些用例中有效）
linkedlist = "allow"
# Allow boolean not operation
# 允许布尔not操作
bool_comparison = "allow"
# Allow used underscore binding
# 允许使用的下划线绑定
used_underscore_binding = "allow"
# Allow redundant pattern matching
# 允许冗余模式匹配
redundant_pattern_matching = "allow"
# Allow if collapse
# 允许if合并
if_same_then_else = "allow"
# Allow reference that is immediately dereferenced
# 允许立即解引用的引用
deref_by_slicing = "allow"
# Allow redundant closure
# 允许冗余闭包
redundant_closure = "allow"
# Allow unnecessary bool not
# 允许可不必要的bool not
needless_bool = "allow"
# Allow double negate - handled by rustc
# 允许双重否定 - 由rustc处理
# Allow std::io::Error::other (not always applicable)
# 允许std::io::Error::other（不总是适用）
# Allow as cast between raw pointers changing constness
# 允许原始指针之间改变constness的as转换
# Allow assertions on constants (for compile-time checks)
# 允许常量上的断言（用于编译时检查）
assertions_on_constants = "allow"
