[package]
name = "nexus-examples"
version = { workspace = true }
publish = false
edition = { workspace = true }
rust-version = { workspace = true }

description = """
Example applications for Nexus framework.
Nexus框架的示例应用。
Equivalent to: Spring Boot Samples, Spring PetClinic
"""

[lints]
workspace = true

# Binary targets / 二进制目标
[[bin]]
name = "core_example"
path = "src/core_example.rs"

[[bin]]
name = "http_example"
path = "src/http_example.rs"

[[bin]]
name = "router_example"
path = "src/router_example.rs"

[[bin]]
name = "resilience_example"
path = "src/resilience_example.rs"

[[bin]]
name = "validation_example"
path = "src/validation_example.rs"

[[bin]]
name = "starter_example"
path = "src/starter_example.rs"

[[bin]]
name = "logging_demo"
path = "src/logging_demo.rs"

[[bin]]
name = "techempower_benchmark"
path = "src/techempower_benchmark.rs"

[[bin]]
name = "stress_test"
path = "src/stress_test.rs"

[dependencies]
# Core framework / 核心框架
nexus-core = { path = "../crates/nexus-core" }
nexus-http = { path = "../crates/nexus-http", features = ["full"] }
nexus-router = { path = "../crates/nexus-router" }
nexus-resilience = { path = "../crates/nexus-resilience" }
nexus-validation = { path = "../crates/nexus-validation" }

# Nexus Starter / 自动配置启动器
nexus-starter = { path = "../crates/nexus-starter", features = ["core", "web"] }
nexus-macros = { path = "../crates/nexus-macros" }

# Observability / 可观测性
nexus-observability = { path = "../crates/nexus-observability", features = ["nexus-format"] }

# Async runtime / 异步运行时
tokio = { workspace = true, features = ["full"] }

# Serialization / 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# Logging / 日志
env_logger = { workspace = true }
tracing = "0.1"

# Utilities / 工具
anyhow = { workspace = true }

# HTTP client for stress tests / 压力测试的 HTTP 客户端
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
