[package]
name = "nexus-actuator"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Actuator endpoints for Nexus framework.
Nexus框架的Actuator端点。
Equivalent to: Spring Boot Actuator
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# Workspace dependencies
nexus-http = { path = "../nexus-http" }
nexus-core = { path = "../nexus-core" }

# External dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
sysinfo = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
