[package]
name = "nexus-aop"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
description = """
Spring AOP style annotations for Nexus framework.
Nexus框架的Spring AOP风格注解。
Equivalent to: Spring AOP, AspectJ
"""
homepage = { workspace = true }
repository = { workspace = true }
readme = "./README.md"
keywords = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
# Macro dependencies / 宏依赖
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
darling_core = { workspace = true }
once_cell = { workspace = true }

# Async runtime / 异步运行时
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
trybuild = { workspace = true }
